--- a/app/blog/_blog.sass
+++ b/app/blog/_blog.sass
@@ -102,6 +102,30 @@
 		i
 			padding-right: 10px
 
+.posts-heading
+	+raleway
+
+	font-size: 26px
+	color: #3a434a
+	font-weight: 700
+	letter-spacing: 2px
+	text-align: center
+	border-bottom: 3px solid #f1ba28
+	margin: 0 auto 20px auto
+	display: inline-block
+	padding: 0 8px 5px 8px
+
+	+media-sm-up
+		font-size: 32px
+		margin-bottom: 60px
+
+
+	span
+		font-size: 36px
+
+		+media-sm-up
+			font-size: 42px
+
 .post
 	+openSans
 
@@ -110,8 +134,16 @@
 	border-bottom: 1px solid $divider
 
 	+media-sm-up
-		padding-top: 60px
-		padding-bottom: 60px
+		padding: 20px
+		background-color: white
+		border: 1px solid $divider
+		border-radius: 2px
+		margin-bottom: 30px
+		transition: box-shadow 300ms $ease-natural, border-color 300ms $ease-natural
+
+		&:hover
+			border-color: transparent
+			box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23)
 
 
 	&:hover
