--- a/app/shared/kurisutiiina/_animations.sass
+++ b/app/shared/kurisutiiina/_animations.sass
@@ -103,3 +103,13 @@
 	35%
 		-webkit-transform: scale3D(0, 0, 1)
 		transform: scale3D(0, 0, 1)
+
+@keyframes attention
+	0%, 20%, 50%, 80%, 100%
+		transform: translateY(0)
+
+	40%
+		transform: translateY(-8px)
+
+	60%
+		transform: translateY(-4px)
